Thu May 29 20:07:45 2008  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in, win32/Makefile.sub, mkconfig.rb, instruby.rb,
	  ruby.c, lib/mkmf.rb, README.EXT, README.EXT.ja: Backport the
	  vendor_ruby directory support.

Wed May 28 17:54:29 2008  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_start_with): Remove an unused variable.
	  (rb_str_upto_m): Fix a prototype.

Wed May 28 17:48:28 2008  Akinori MUSHA  <knu@iDaemons.org>

	* range.c (range_step): Fix brokenness when a non-integer numeric
	  value is specified as step. [rubyspec]
	  (range_step): Make use of String#step internally if a string (or
	  string-alike) range is given.

	* string.c (rb_str_upto_m, Init_String): Add an optional second
	  argument to specify if the last value should be included.

Wed May 28 16:53:39 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Call rb_ary_modify_check() at the
	  beginning. [rubyspec]

Wed May 28 16:12:44 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/webrick/httpservlet/cgihandler.rb (WEBrick::HTTPServlet::CGIHandler#do_GET):
	  Set the HTTP status code to 302 if a Location header field is
	  present and the status code is not valid as a client
	  redirection.  cf. RFC 3875 6.2.3, 6.2.4.

Wed May 28 15:18:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/singleton.rb (SingletonClassMethods): _load should be public.

Wed May 28 12:52:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump, r_object0, marshal_load): search
	  private methods too.  [ruby-dev:34671]

	* object.c (convert_type): ditto.

Tue May 27 23:26:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (rb_bug): description from rb_bug() should include
	  patchlevel.  [ruby-dev:34826]

Tue May 27 20:19:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Return an empty array instead of
	  nil when pos is valid and len is adjusted from a valid value to
	  zero; caught by RubySpec.
